@startuml AudioStateMachine

    '############################ States ############################

    [*] --> IDLE

    state IDLE
    state READY
    state LOADING
    state PLAYING
    state PAUSED

    '############################ Handlers ############################

    IDLE: enter / this.actions.pauseAllAudio(); this.actions.resetAllAudio(); this.actions.uiIdle(); this.actions.hideLoadingAnimation(); this.actions.initInputAdjustments();
    IDLE --> LOADING : SQUARE_CLICKED / this.actions.startNewStoryProcess();
    IDLE --> LOADING : TOGGLE_PAUSE_RESUME / this.actions.startNewStoryProcess();

    LOADING: enter / this.actions.showLoadingAnimation(); this.actions.uiLoadingButtons(); this.actions.toggleView();
    LOADING --> PLAYING : SPEECH_READY / this.actions.setUpAndStartAllAudio();
    LOADING --> PAUSED : TOGGLE_PAUSE_RESUME / this.actions.pauseAllAudio();
    LOADING --> IDLE : CANCEL / this.actions.abortProcess();

    PLAYING: enter / this.actions.uiPlayingButtons(); this.actions.removeBlurr(); this.actions.greenDots();
    PLAYING --> PAUSED : TOGGLE_PAUSE_RESUME / this.actions.pauseAllAudio();
    PLAYING --> IDLE : MUSIC_OVER [this.actions.bothTracksEnded()]
    PLAYING --> LOADING : SQUARE_CLICKED / this.actions.startNewStoryProcess(); this.actions.uiLoadingButtons();
    PLAYING --> IDLE: CANCEL / this.actions.stopAndResetAllAudio();
    PLAYING : CHAT_HISTORY_CLICKED / this.actions.toggleTextVisibility();
    PLAYING : FROM_START_CLICKED / this.actions.pauseAllAudio(); this.actions.resetAllAudio(); this.actions.setUpAndStartAllAudio();
    PLAYING : SPEECH_OVER / this.actions.toggleView();

    PAUSED: enter / this.actions.uiPausedButtons(); this.actions.addBlurr();
    PAUSED --> PLAYING : TOGGLE_PAUSE_RESUME / this.actions.resumeAllAudio();
    PAUSED --> PLAYING : FROM_START_CLICKED / this.actions.resetAllAudio(); this.actions.setUpAndStartAllAudio();
    PAUSED --> READY : INPUT_CHANGED [this.actions.inputIsValid()]
    PAUSED --> IDLE: CANCEL / this.actions.setUpAndStartAllAudio();

/'! $CONFIG : toml
SmRunnerSettings.transpilerId = "JavaScript"
'/

@enduml
